--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/translate": "^1.1.0",
+    "body-parser": "^1.18.2",
     "ejs": "^2.5.8",
     "express": "^4.16.2",
     "path": "^0.12.7"
