--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "ejs": "^2.5.8",
     "express": "^4.16.2",
     "path": "^0.12.7",
-    "socket.io": "^2.1.0"
+    "request": "^2.85.0",
+    "socket.io": "^2.1.0",
+    "text-to-speech": "^1.0.8"
   }
 }
