--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google-cloud/text-to-speech": "^0.1.0",
     "@google-cloud/translate": "^1.1.0",
+    "base64-arraybuffer": "^0.1.5",
     "body-parser": "^1.18.2",
     "ejs": "^2.5.8",
     "express": "^4.16.2",
